name:                fqdn
version:             0.1.0.0
license-file:        UNLICENSE
build-type:          Simple
cabal-version:       >= 1.8


extra-source-files:
    cbits/fqdn.c

library
    exposed-modules:  Network.FQDN

    c-sources:        cbits/fqdn.c
    cc-options:       -Wall -Werror
    include-dirs:     cbits

    build-depends:    base

    extensions:       ForeignFunctionInterface
    ghc-options:      -Wall -Werror
